--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "live.2012.09.13.tar.gz": bbef4c533d2a3a60b92e6b39a99984427a7b69ba
+  live.2013.06.18.tar.gz: de2877e03cbe540ea9bf1d5825970851edb57d7a
