--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   live.2013.06.18.tar.gz: de2877e03cbe540ea9bf1d5825970851edb57d7a
+  live.2013.08.28.tar.gz: 11c666bc1e365bc73c981f8012be7a228d44c58a
