--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   live.2014.01.07.tar.gz: 09fcf815a448d0ba27cff367099a241adde97a33
+  live.2014.07.04.tar.gz: a4ac28c2088bafa40d5dfa7d8d5435800198479c
