--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  live.2015.03.06a.tar.gz: 6a20b7ccb21cbb396faf56e9264e47704e590124
+  live.2015.08.07.tar.gz: f2a9c189c91cf29f0a21dde60efdf2e6d40ceeab
